# archicore

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  false-positive-report.md  feature_request.md
.github/workflows/: example-usage.yml  self-test.yml
native/: CMakeLists.txt  binding.gyp
native/chunker/: CMakeLists.txt
native/chunker/include/: chunker.h
native/chunker/src/: binding.cpp  boundaries.cpp  chunker.cpp  tokenizer.cpp
native/common/include/: common.h
native/indexer/: CMakeLists.txt
native/indexer/include/: indexer.h
native/indexer/src/: binding.cpp  hasher.cpp  indexer.cpp  merkle.cpp
src/: action.ts  cli.ts  index.ts
src/analyzers/: ai-narrator.ts  context-builder.ts  dead-code.ts  documentation-generator.ts  duplication.ts  response-enhancer.ts  security.ts
src/architecture/: index.ts
src/cli/ui/: index.ts
src/code-index/: ast-parser.ts  dependency-graph.ts  file-chunker.ts  index.ts  source-map-extractor.ts  symbol-extractor.ts
src/export/: index.ts
src/graph/: graph-queries.ts  graph-store.ts  index.ts  neo4j-client.ts
src/impact-engine/: index.ts
src/metrics/: index.ts
src/native/: chunker.ts  index.ts  indexer.ts
src/plugins/: index.ts  types.ts
src/plugins/llm/: ollama.ts  openai.ts
src/rules-engine/: index.ts
src/search/: bm25.ts  index.ts  search-index.ts
src/server/: index.ts  project-manager.ts
src/server/routes/: analysis.ts  export.ts  graph.ts  projects.ts  search.ts
src/types/: index.ts  llm.ts
src/utils/: file-utils.ts  library-detector.ts  logger.ts  project-analyzer.ts
src/watcher/: index.ts
